Bug 422079 - Akonadi searches for file mysql-global.conf at wrong path
Summary: Akonadi searches for file mysql-global.conf at wrong path
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: server (other bugs)
Version First Reported In: 5.14.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-26 06:22 UTC by Yaroslav Sidlovsky
Modified: 2020-05-27 12:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yaroslav Sidlovsky 2020-05-26 06:22:53 UTC
SUMMARY


STEPS TO REPRODUCE
1. Run command `strace -e statx akonadiselftest 2>&1 |grep mysql-global.conf`;
2. See output - akonadi searches for path `/etc/xdg//akonadi/akonadi/mysql-global.conf` instead of `/etc/xdg//akonadi/mysql-global.conf` (see extra `akonadi/` part prepended to the relative path).

OBSERVED RESULT
Because of the above akonadiselftest reports that `mysql-global.conf` is not found and 1 test is always failing, but file is on it place.


EXPECTED RESULT
Akonadi server and selftest utility should look for file `mysql-global.conf` at path `/etc/xdg/akonadi/`.


SOFTWARE/OS VERSIONS
Operating System: Fedora 32
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.70.0
Qt Version: 5.13.2
Kernel Version: 5.6.13-300.fc32.x86_64
OS Type: 64-bit
Processors: 4 × AMD FX(tm)-9590 Eight-Core Processor
Memory: 22,4 ГиБ
Comment 1 Yaroslav Sidlovsky 2020-05-26 06:32:35 UTC
Proposed patch: https://phabricator.kde.org/D29833.
This patch just checks if `akonadi/` prefix has been already prepended.
Comment 2 Daniel Vrátil 2020-05-27 12:40:54 UTC
Git commit 911c2394f7ce01d1f22c63d9159b0ee4726b7069 by Daniel Vrátil, on behalf of Yaroslav Sidlovsky.
Committed on 27/05/2020 at 12:39.
Pushed by dvratil into branch 'release/20.04'.

Akonadi searches for file mysql-global.conf at wrong path

Akonadi can't find `mysql-global.conf` placed at path `/etc/xdg/akonadi` dir.
It looks for it at `/etc/xdg/akonadi/akonadi/` (see extra `akonadi/` part appended).

Differential Revision: https://phabricator.kde.org/D29833

M  +1    -1    src/server/storage/dbconfigmysql.cpp
M  +2    -2    src/widgets/selftestdialog.cpp

https://invent.kde.org/pim/akonadi/commit/911c2394f7ce01d1f22c63d9159b0ee4726b7069