Akonadi searches for file mysql-global.conf at wrong path

Akonadi can't find `mysql-global.conf` placed at path `/etc/xdg/akonadi` dir.
It looks for it at `/etc/xdg/akonadi/akonadi/` (see extra `akonadi/` part appended).

BUG: 422079

Differential Revision: https://phabricator.kde.org/D29833